--- a/config/application.properties
+++ b/config/application.properties
@@ -1,1 +1,31 @@
 server.port=8081
+
+
+#Datasource
+database.url=jdbc:mysql://localhost/azuolas?useSSL=false
+database.username=root
+database.password=root
+database.driver=com.mysql.jdbc.Driver
+hibernate.show_sql=true
+hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+
+hibernate.hbm2ddl.auto=update
+
+
+#Database Configurations
+spring.datasource.type=org.apache.tomcat.jdbc.pool.DataSource
+spring.datasource.url=jdbc:mysql://localhost/azuolas?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+
+
+
+
+
+#JPA Configurations
+spring.jpa.hibernate.naming.physical-strategy=com.teamseven.utils.PhysicalNamingStrategyImpl
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=com.mysql.jdbc.Driver
