--- a/config/application.properties
+++ b/config/application.properties
@@ -1,15 +1,11 @@
 server.port=8081
-
-
 #Datasource
 database.url=jdbc:mysql://localhost/azuolas?useSSL=false
 database.username=root
-database.password=root
+database.password=
 database.driver=com.mysql.jdbc.Driver
 hibernate.show_sql=true
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-
-
 hibernate.hbm2ddl.auto=update
 
 
@@ -19,11 +15,6 @@ spring.datasource.url=jdbc:mysql://localhost/azuolas?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
-
-
-
-
 
 #JPA Configurations
 spring.jpa.hibernate.naming.physical-strategy=com.teamseven.utils.PhysicalNamingStrategyImpl
