Sprint 4- batch1 - Implementation of Reports, Application status checking

--- a/config/application.properties
+++ b/config/application.properties
@@ -2,7 +2,7 @@ server.port=8081
 #Datasource
 database.url=jdbc:mysql://localhost/azuolas?useSSL=false
 database.username=root
-database.password=
+database.password=root
 database.driver=com.mysql.jdbc.Driver
 hibernate.show_sql=true
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
