--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,33 @@
 			<artifactId>hibernate-entitymanager</artifactId>
 			<version>5.0.12.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>com.teamapt</groupId>
+			<artifactId>base-prototypes</artifactId>
+			<version>1.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.11</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.12</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>19.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.teamapt</groupId>
+			<artifactId>file-utils</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
